k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svelte-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      app: svelte
  template:
    metadata:
      labels:
        app: svelte
    spec:
      containers:
      - name: svelte-con
        # Nginx 설정이 포함된 Svelte 이미지
        image: 084550838259.dkr.ecr.ap-northeast-2.amazonaws.com/svelte
        ports:
        - containerPort: 80
