k8s/service-nlb.yaml
apiVersion: v1
kind: Service
metadata:
  name: svelte-nlb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
spec:
  type: LoadBalancer
  selector:
    app: svelte # NLB 트래픽을 Svelte(Nginx)로 전달
  ports:
  - port: 80
    targetPort: 80
