k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svelte-svc
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: svelte
