k8s/service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast # Nginx의 proxy_pass 주소와 일치해야 함
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: fastapi
